Alignment issue fixed

--- a/src/components/chatContent/chatContent.css
+++ b/src/components/chatContent/chatContent.css
@@ -87,7 +87,6 @@
 }
 .chat__msg {
   user-select: none;
-  margin-top: -15px;
 }
 
 .chat__item.other {
